--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	</script>
 
 	<script src='js/knockout-3.4.0.js'></script>
-	<script src='js/jquery-1.12.0.min.js'></script>
+	<script src='js/jQuery.js'></script>
 	<script src='js/map.js'></script>
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuxJsFG2jE6b1AMoWjgNXPeYNxpXPcYYQ&v=3&callback=render" onerror="mapErrorHandling()"></script>
 </body>
